--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,40 @@
 
 body{
     background-color: var(--cor-defundo);
-}
-.cabecalho{
-    background-color: #485f4c;
-}
+    background:linear-gradient(180deg,)
+
+    root{
+        # estilo.css
+        -- cor-de-fundo: Orgb(255, 255, 255);
+        -- cor-da-fonte:
+        rgb(0, 0, 0);
+        --cor-fonte-titulos: O#ffffff;
+        -- cor-de-fundo-cabecalho: var (--cor-de-fundo):
+        9
+        body{
+        background:
+        •rgb(0, 0, 0);
+        background: linear-gradient (180deg, height: 100vh;
+        1
+        Urgba(0,0,0,1) 40%,
+        口 rgba（0,255,4,1）100%）；
+        textot
+        color：口#ffffff；
+        hif color: Orgb(255, 255, 255);
+        . cabecalho menu-hamburguer
+        width: 24px;
+        height: 24px;
+        display: inline-block ; background-image:url ('imagens/Menu.svg');
+        background- repeat: no- repeat; background-position: center;
+
+
+
+        cabecalhof
+background-color:var (--branco) ;
+display: flex;
+justify-content: space- between;
+•container
+display: flex justify-content: space-between : align-items: center;
+.container imagemf
+padding: Lem;
+I
