--- a/estilos/header.css
+++ b/estilos/header.css
@@ -1,7 +1,7 @@
 .cabeçalho {
     width: 24px;
     height: 24px;
-    display: flexbox
+    display: flex
     background-image:url("../menu2-removebg-preview.png");
     background-repeat: no-repeat;
     background-position: center;
