--- a/estilo.css
+++ b/estilo.css
@@ -18,4 +18,12 @@ body{
     padding: 1em;
     border-radius: 5px;
     text-decoration: none;
+    
+}
+.logo1{
+    width: 20%;
+
+}
+.logo2{
+width: 20%;
 }
