--- a/estilos/header.css
+++ b/estilos/header.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 
 .cabeçalho {
     background-color: aliceblue;
@@ -18,5 +20,10 @@
     position:absolute;
     top: 15px;
     font-family: "Josefin Sans", sans-serif;
+    }
+    .container--dois{
+        padding: 20px;
+        margin-bottom: 25px;
+        font-family: "Josefin Sans", sans-serif;
     }
 
