--- a/estilos/header.css
+++ b/estilos/header.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 
 
 .cabeçalho {
@@ -27,3 +29,8 @@
         font-family: "Josefin Sans", sans-serif;
     }
 
+    .container--tres{
+        padding: 20px;
+        margin-bottom: 25px;
+        font-family: "Josefin Sans", sans-serif;
+    }
