--- a/estilos/sessao.css
+++ b/estilos/sessao.css
@@ -1,3 +1,3 @@
 .container{
-    background: linear-gradient(180deg,#6F962E(181,125,87,1) 30%,#536B2B(98,72,54,1) 100%);
+    background color: linear-gradient(180deg,#6F962E(181,125,87,1) 30%,#536B2B(98,72,54,1) 100%);
 }
