--- a/estilos/header.css
+++ b/estilos/header.css
@@ -25,12 +25,14 @@
     }
     .container--dois{
         padding: 20px;
+        color: aliceblue;
         margin-bottom: 25px;
         font-family: "Josefin Sans", sans-serif;
     }
 
     .container--tres{
         padding: 20px;
+        color: aliceblue;
         margin-bottom: 25px;
         font-family: "Josefin Sans", sans-serif;
     }
