--- a/estilos/header.css
+++ b/estilos/header.css
@@ -5,7 +5,7 @@
 
 
 .cabeçalho {
-    background-color: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
     display: flex;
     justify-content: space-between;
     align-items: center;
