--- a/estilos/header.css
+++ b/estilos/header.css
@@ -6,11 +6,9 @@
 
 .cabeçalho {
     background: rgb(0, 0, 0);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
+    display: block;
+    unicode-bidi: isolate;
+    
 .container{
     position: relative;
 }
