--- a/estilos/header.css
+++ b/estilos/header.css
@@ -8,7 +8,9 @@
     background: rgb(0, 0, 0);
     display: block;
     unicode-bidi: isolate;
-    
+}
+
+
 .container{
     position: relative;
 }
