--- a/estilo.css
+++ b/estilo.css
@@ -46,5 +46,6 @@ background-color: #536B2B;
    background: #6F962E;
 }
 .container--quatro{
-    background-image;
+    background-image: url(./img/1814\ 2.png);
+    background-size: cover; 
 }
