--- a/estilo.css
+++ b/estilo.css
@@ -46,7 +46,7 @@ background-color: #536B2B;
    background: #6F962E;
 }
 .container--quatro{
- background-image: url(./img/2023_09_11_FIA-MeioAmbiente-CapaBlog\ 1.png);
+ background-image: url(./img/1814.jpg);
     background-size: cover;  
 
 }
