--- a/estilo.css
+++ b/estilo.css
@@ -43,7 +43,7 @@ body{
 background-color: #536B2B;
 }
 .container--tres{
-   background: #6F962E;
+   background: #536B2B;
 }
 .container--quatro{
  background-image: url(./img/2023_09_11_FIA-MeioAmbiente-CapaBlog\ 1\ \(2\).png);
