--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
 @import url();
 
 :root{
-    --cor-de-fundo:#77A42E ;
+    --cor-de-fundo:#536B2B ;
     --cor-de-texto: ;
 
 }
@@ -41,7 +41,7 @@ body{
     margin: 0%;
 }
 .container--dois{
-background-color: #536B2B;
+background-color: #6F962E;
 margin: 0%;
 display: flex;
 flex-direction: column;
@@ -49,7 +49,7 @@ justify-content: center;
 align-items: center;
 }
 .container--tres{
-   background: #536B2B;
+   background: #6F962E;
    margin: 0%;
    display: flex;
    flex-direction: column;
