--- a/estilo.css
+++ b/estilo.css
@@ -33,6 +33,8 @@ body{
     display: flex;
     align-items: center;
     justify-content:space-between;
+    height: 30%;
+    width: 20%;
 }
 .container{
     background: black;
