--- a/estilo.css
+++ b/estilo.css
@@ -33,8 +33,8 @@ body{
     display: flex;
     align-items: center;
     justify-content:space-between;
-    height: 300%;
-    width: 200%;
+    flex-direction: column;
+    
 }
 .container{
     background: black;
