--- a/estilo.css
+++ b/estilo.css
@@ -33,7 +33,6 @@ body{
     display: flex;
     align-items: center;
     justify-content:space-between;
-    flex-direction: column;
     
 }
 .container{
@@ -41,6 +40,10 @@ body{
     font-size: 30px;
     color: aliceblue;
     margin: 0%;
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+    align-items: center;
 }
 .container--dois{
 background-color: #6F962E;
