--- a/estilo.css
+++ b/estilo.css
@@ -63,7 +63,7 @@ align-items: center;
 }
 .container--quatro{
  background-image: url(./img/2023_09_11_FIA-MeioAmbiente-CapaBlog\ 1\ \(2\).png);
-    height: 1200px; 
+    height: 500%; 
     background-size: cover;  
     background-repeat: no-repeat;
     display: flex;
