--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,6 @@
-
-@import url();
-@import url();
-@import url();
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 :root{
     --cor-de-fundo:#536B2B ;
     --cor-de-texto: ;
@@ -78,5 +76,17 @@ align-items: center;
 
 
 }
+.container--dois{
+    padding: 20px;
+    color: aliceblue;
+    margin-bottom: 25px;
+    font-family: "Josefin Sans", sans-serif;
+}
 
+.container--tres{
+    padding: 20px;
+    color: aliceblue;
+    margin-bottom: 25px;
+    font-family: "Josefin Sans", sans-serif;
+}
 
