--- a/estilo.css
+++ b/estilo.css
@@ -104,7 +104,7 @@ align-items: center;
     font-size: 70px;
    }
 
-   .descricao--texto{
+   .pdescricao--texto{
     font-size: 35px;
    }
    .descricao--titulo1{
