--- a/estilo.css
+++ b/estilo.css
@@ -104,10 +104,10 @@ align-items: center;
     font-size: 70px;
    }
 
-   .pdescricao--texto{
+   .descricao--texto{
     font-size: 50px;
    }
    .descricao--titulo1{
     font-size: 60px;
    }
-    
+}
