--- a/estilos/header.css
+++ b/estilos/header.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
-
+.cabecalho{
+    color: white;
+}
 
 @media (min-width: 1024px){
 .container__titulo{
