--- a/estilo.css
+++ b/estilo.css
@@ -111,5 +111,9 @@ align-items: center;
    .descricao--titulo1{
     font-size: 60px;
    }
+   .container--descricao{
+    font-size: large;
+   }
+
 }
  
