--- a/estilo.css
+++ b/estilo.css
@@ -111,9 +111,9 @@ align-items: center;
    .descricao--titulo1{
     font-size: 60px;
    }
-   .container--descricao{
+   .container--descricao--texto{
     display: flex;
    }
-
+ 
 
  
