--- a/estilo.css
+++ b/estilo.css
@@ -60,6 +60,7 @@ align-items: center;
 .descricao--texto{
     display: flex;
     text-align: right;
+    font-size: 20px;
 }
 .container--tres{
    background: #6F962E;
