--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,7 @@ align-items: center;
 }
 }
 .descricao--texto{
-    display: flex;
+    display: contents;
     text-align: right;
     font-size: 20px;
 }
