--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,8 @@ align-items: center;
 }
 }
 .descricao--texto{
-    display: contents;
+    display: flex;
+flex-direction: column;
     text-align: right;
     font-size: 20px;
 }
