--- a/estilo.css
+++ b/estilo.css
@@ -65,6 +65,8 @@ flex-direction: column;
 }
 .container--img{
     background-image:url(./img/images-removebg-preview\ \(1\)\ 1.png);
+    width: 200px;
+    height: 150px;
     text-align: left;
 
 }
