--- a/estilo.css
+++ b/estilo.css
@@ -29,7 +29,7 @@ body{
 }
 .logo3{
  position: absolute;
-    left: 70px;
+    right: 70px;
     margin-top: -40px;
     width: 200px;
 height 200px;
