--- a/estilo.css
+++ b/estilo.css
@@ -29,7 +29,7 @@ body{
 }
 .logo3{
  position: absolute;
-    right: 50px;
+    left: 50px;
     margin-top: -40px;
     width: 200px;
 height 200px;
