--- a/estilo.css
+++ b/estilo.css
@@ -30,14 +30,14 @@ body{
 .logo3{
  position: relative;
     width: 200px;
-   height: 200px;
+   height 200px;
   }
   
   .logo4 {
     position: absolute;
     left: 70px;
     width: 200px;
-    height: 200px;
+    height 200px;
 
   }
 .cabecalho{
